# ball_sim

./: Cargo.toml
app/: Cargo.toml
app/src/: app.rs  main.rs  sim.rs  tiles.rs
renderer/: Cargo.toml
renderer/src/: ball.rs  chunk.rs  lib.rs  state.rs  texture.rs  vertex.rs
renderer/src/shaders/: ball.wgsl  chunk.wgsl
renderer/src/textures/: directions.aseprite  sim_tiles.aseprite
shared/: Cargo.toml
shared/src/: lib.rs
